final changes before presentation

--- a/rental/templates/rental.html
+++ b/rental/templates/rental.html
@@ -16,7 +16,7 @@ Rental Page
                <th scope="col">ID</th>
                <th scope="col">Name</th>
                <th scope="col">Location</th>
-               <th scope="col">Price</th>
+               <th scope="col">Deposit</th>
                <th scope="col">Options</th>
             </tr>
          </thead>
@@ -54,7 +54,7 @@ Rental Page
                               Return this property
                           </button>
                           <p class="card-text"><strong>
-                              This Property costs {{ owned_item.price }}$
+                              This Property's Deposit is {{ owned_item.price }}$
                           </strong></p>
                       </div>
                   </div>
